--- a/main/css/style.css
+++ b/main/css/style.css
@@ -1,157 +1,252 @@
-.header {
-  list-style-type: none;
-  margin: 10px;
-  overflow: hidden;
-  margin-right: 16px;
-  font-family: arial,sans-serif;
-  font-size: 13px;
+body{
+  margin: 0;
+  width: 100%;
+  font-family: "Arial", sans-serif;
 }
 
-.headerli a {
+/********NAVBAR SECTION**********/
+
+nav{
   display: block;
-  color: black;
-  text-align: center;
-  padding: 5px 5px;
-  text-decoration: none;
+  position: relative;
+  top: 0;
+  background-color: #fff;
+  width: 100%;
+  height: 50px;
+  font-family:'Arial', sans-serif;
+  font-size: 13px;
+  margin-bottom: 7px;
 }
 
-.headerli a:hover {
+.navdiv{
+  position: absolute;
+  height: 48px;
+  width: 200px;
+  right: 15px;
+  top: 1px;
+}
+
+a{
+  text-decoration: none;
+  color:black;
+  margin: auto;
+}
+
+a:hover{
   text-decoration: underline;
 }
 
-.container {
-  text-align: center;
-  margin: 100px;
+ul{
+  list-style-type: none;
+  position: absolute;
+  right: 5px;
+  width: 200px;
+  height: 48px;
+  margin: 0;
+  padding: 0;
 }
 
-.search-area {
-  background: #fff;
-  display: flex;
-  border: 1px solid #dfe1e5;
-  box-shadow: none;
-  z-index: 3;
-  height: 44px;
-  margin: 0 auto;
-  margin-top: -77px;
-  width: 582px;
+li{
+  display: inline;
+  margin: 4px;
+  
+  
 }
 
-.search-area:hover {
-box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 2px 5px 0 rgba(0,0,0,0.19);
+.menupic{
+  
+  width: 16px;
+  height: 16px;
+  opacity: 1;
+  padding: auto auto;
+
+}
+.menu-pic-div{
+  width: 40px;
+  height: 40px;
+  display: inline;
 }
 
-.search {
-  flex: 1;
-  display: flex;
-  padding: 5px 8px 0 16px;
-  padding-left: 14px;
+.menu-pic-div:hover{
+  box-shadow: #edebec;
 }
 
-.search-img {
-  display: flex;
+.asli-pic-div{
+  width: 40px;
+  height: 40px;
+  display: inline;
+}
+
+.aslipic{
+  width: 35px;
+  height: 35px;
+  margin-top: 5px;
+  padding-top: 10px;
   align-items: center;
-  padding-right: 13px;
-  margin-top: -5px;
 }
 
-.search-img span {
+.asli-pic-div:hover{
+  border-radius: 100%;
+  box-shadow: #edebec;
+}
+
+
+/**************MAIN SECTION***********/
+
+#main{
+  align-items: center;
+  text-align: center;
+  background-color: #fff;
+  font-family: 'Arial', sans-serif;
+  height: 470px;
+}
+
+.google-logo{
+  width: 280px;
+  height: 92px;
+}
+
+.search{
+  position: relative;
+  height: 160px;
+
+}
+
+.searchdiv{
+  border: #dfe1e5 solid 1px;
+  width: 582px;
+  height: 44px;
+  align-items: center;
+  display: flex;
+  background-color: #fff;
+  margin: 0 auto;
+  z-index: 3;
+  box-shadow: none;
+  border-radius: 24px;
+  margin-top: 25px;
+}
+
+.searchdiv:hover{
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.searchinput{
+  
+  word-wrap: break-word;
+  border: none transparent;
+  outline: 0;
+  height: 34px;
+  width: 403px;
+  font-size: 16px;
+  margin-left: 5px;
+}
+
+.btn{
+  background-color: #f8f9fa;
+  color: #3c4043;
+  border: 1px solid #f8f9fa;
+  border-radius: 4px;
+  font-family: 'Arial', sans-serif;
+  font-size: 14px;
+  margin: 30px 4px;
+  padding: 20px 16p;
+  line-height: 27px;
+  height: 36px;
+  min-width: 130px;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+
+}
+.btn:hover{
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+
+.fa-sm{
   color: #9aa0a6;
+  margin-left: 15px;
+
+}
+
+.fa-keyboard{
+  color: #676869;
+
+}
+
+.google-mic{
+  width: 30px;
+  margin-left: 15px;
+  
+}
+
+.camera-logo{
+  width: 24px;
+  margin-left: 15px;
+
+}
+
+/******FOOTER SECTION******/
+
+
+#footer{
+  background-color: #f2f2f2;
+}
+
+
+.trk{
+  padding: 15px 30px;
+  font-size: 15px;
+  color: #70757a;
+  border-bottom: 1px solid #dadce0;
   height: 20px;
-  width: 20px;
-  margin-top: 0px;
-  display: inline-block;
-  fill: currentColor;
-  line-height: 24px;
+  
+}
+
+.bottom-footer{
+  font-size: 15px;
+  color: #70757a;
+  width: 100%;
+  height: 45px;
   position: relative;
 }
 
-.input-enter {
-  display: flex;
-  flex: 1;
-  flex-wrap: wrap;
+
+.about{
+  width: 35%;
+  display: inline-block;
+  position: absolute;
+  left: 30px;
+  padding-top: 12px;
 }
 
-.input-area {
-  color: transparent;
-  flex: 100%;
-  white-space: pre;
-  font: 16px arial, sans-serif;
-  line-height: 34px;
-  height: 34px !important;
-  display: block;
+
+.settings{
+   
+   font-size: 14px;
+   font-family: 'Arial', sans-serif;
+   color: #70757a;
+   width: 15%;
+   display: inline-block;
+   position: absolute;
+   right: 5px;
+   padding-top: 12px;
 }
 
-.input {
-  margin: 0;
-  padding: 0;
-  color: rgba(0, 0, 0, 0.87);
-  word-wrap: break-word;
-  outline: none;
-  display: flex;
-  flex: 100%;
-  margin-top: -68px;
-  font: 16px arial, sans-serif;
-  line-height: 34px;
-  height: 34px !important;
-  text-rendering: auto;
-  letter-spacing: normal;
-  word-spacing: normal;
-  text-transform: none;
-  text-indent: 0px;
-  text-shadow: none;
-  text-align: start;
-  appearance: textfield;
-  cursor: text;
-}
-
-.googlesearch {
-  margin: 11px 4px;
-  padding: 0 16px;
-  line-height: 27px;
-  min-width: 54px;
-  text-align: center;
-  cursor: pointer;
-  user-select: none;
-}
-
-.feelinglucky {
-  padding: 0 16px;
-  line-height: 27px;
-  min-width: 54px;
-  text-align: center;
-  cursor: pointer;
-  user-select: none;
-}
-
-.footer {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  border: 1px solid #dfe1e5;
-  border-top: 1px solid #dadce0;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  margin-left: -8px;
-  line-height: 10px;
-}
-
-.footerli {
-  float: left;
-}
-
-.footerli a {
-  display: block;
-  color: #70757a;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-family: arial, sans-serif;
+.bottom-footer a{
   font-size: 14px;
-  margin-left: 14px;
-  margin-right: -20px;
+  font-family: 'Arial', sans-serif;
+  color: #70757a;
+  padding: 15px 10px 5px;
 }
 
-.footerli a:hover {
-  text-decoration: underline;
+.leaf{
+  height: 14px;
+}
+
+.carbon-link{
+  font-family: 'Arial', sans-serif;
+  color: #70757a; 
+  font-size: 14px;
+  width: 15%;
+  display: inline;
 }
